# two-wheeled-cart-

./: CMakeLists.txt  README.md  package.xml  right_wheel_controller.xml  simple_diff_drive_controller.xml  simple_diff_drive_controller2.xml
config/: bridges.yaml  control.yaml  controller.yaml  controller2.yaml  controller3.yaml  nav2_params.yaml
include/: right_wheel_controller.hpp  simple_diff_drive_controller.hpp  simple_diff_drive_controller2.hpp
launch/: aruco_pose_launch.py  color.launch.py  loader.launch.py  one.launch.py  robot1.launch.py  robot3.launch.py  spawn_robot.launch.py  test.launch.py  traject.launch.py  world.launch.py
scripts/: timed_velocity_planner.py
src/: process_node.cpp  right_wheel_controller.cpp  simple_diff_drive_controller.cpp  simple_diff_drive_controller2.cpp
urdf/: mogi_bot.urdf  mogi_bot.urdf.xacro  mogi_bot.urdf2.xacro  mogi_bot2.urdf.xacro  mogi_bot_control.xacro  robot2.urdf.xacro  robot3.urdf.xacro  two_wheel_cart.urdf
workspace/src/twc/launch/: world.launch.py
workspace/src/twc/src/: simple_diff_drive.cpp  teleop_controller.cpp
workspace/src/twc/urdf/: two_wheel_cart.urdf
workspace/src/twc/worlds/: indoor.world
worlds/: indoor.world
