<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelocation="http://www.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>twc</name>
  <version>0.0.0</version>
  <description>Two Wheel Cart package with Gazebo simulation</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 核心 ROS2 依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  
  <!-- 启动文件依赖 -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  
  <!-- 机器人状态发布 -->
  <depend>robot_state_publisher</depend>
  
  <!-- Gazebo 相关依赖 -->
  <depend>gazebo_ros</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  
  <!-- ROS2 Control 相关依赖 -->
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>ros2_controllers</depend>
  
  <!-- 其他可能需要的依赖 -->
  <depend>xacro</depend>
  <depend>urdf</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
