<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelocation="http://www.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>two_wheeled_cart</name>
  <version>0.0.0</version>
  <description>A simple two-wheeled cart with gimbal</description>
  <maintainer email="xuncheng@example.com">xuncheng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 基本依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Gazebo 相关 -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>